...
                  ),
                ),
                onPressed: () {
                  Navigator.pushNamed(context, '/register_landing_page');
                },
                child: const Text(
                  'Sign up for free',
                  style: TextStyle(fontSize: 18),
                ),
              ),
              const SizedBox(height: 16),
              OutlinedButton(
                style: OutlinedButton.styleFrom(
...
