...
      crossAxisAlignment: CrossAxisAlignment.stretch,
      children: [
        // Continue with Email.
        ElevatedButton.icon(
          icon: const Icon(Icons.email, color: Colors.white),
          label: const Text(
            'Continue with Email',
            style: TextStyle(color: Colors.white, fontSize: 18),
          ),
          style: ElevatedButton.styleFrom(
            backgroundColor: Colors.orange,
            minimumSize: const Size(double.infinity, 45),
            shape: RoundedRectangleBorder(
...
